About/Services/Portfolio pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             
          <ul class="main-nav__list site-list">
             <li class="site-list__item"><a href="about.html">About</a></li>
-            <li class="site-list__item"><a href="#">Services</a></li>
-            <li class="site-list__item"><a href="#">Projects</a></li>
+            <li class="site-list__item"><a href="services.html">Services</a></li>
+            <li class="site-list__item"><a href="portfolio.html">Projects</a></li>
             <li class="site-list__item"><a href="#">Prices</a></li>
             <li class="site-list__item"><a href="#">Jobs</a></li>
             <li class="site-list__item"><a href="#">Contacts</a></li>
@@ -498,8 +498,8 @@
                <span class="footer__header">Company</span>
                 <ul>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="#">Prices</a></li>
                     <li><a href="#">Team</a></li>
                     <li><a href="#">Jobs</a></li>
