--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="theme-color" content="#1f242c">
     
     <link rel="preload" href="css/style.min.css" as="style">
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
