--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <li class="site-list__item"><a href="about.html">About</a></li>
             <li class="site-list__item"><a href="services.html">Services</a></li>
             <li class="site-list__item"><a href="portfolio.html">Projects</a></li>
-            <li class="site-list__item"><a href="#">Prices</a></li>
-            <li class="site-list__item"><a href="#">Jobs</a></li>
+            <li class="site-list__item"><a href="price.html">Prices</a></li>
+            <li class="site-list__item"><a href="jobs.html">Jobs</a></li>
             <li class="site-list__item"><a href="#">Contacts</a></li>
             <li class="site-list__item clearfix site-list__button-contact"><a href="#" class="button  button--bordered">Contact Us</a></li>
             
@@ -522,9 +522,9 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#">Prices</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Jobs</a></li>
+                    <li><a href="price.html">Prices</a></li>
+                    <li><a href="about.html#team">Team</a></li>
+                    <li><a href="jobs.html">Jobs</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
