--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="cards__item card__item--profession">
                         <div class="card__item--big-picture"><img src="img/raster/taras_team.png" alt="team lead"></div>
-                        <span class="cards__profession-name">Tars</span>
+                        <span class="cards__profession-name">Taras</span>
                         <span class="cards__profession-desc">&lt;Frontend Developer/&gt;</span>
                         <a href="#">
                             <svg width="15px" heigth="18px">
@@ -180,7 +180,7 @@
                         </a>
                     </div>
                     <div class="cards__item card__item--profession">
-                        <div class="card__item--big-picture"><img src="img/raster/vikas_team.png" alt="team lead"></div>
+                        <div class="card__item--big-picture"><img src="img/raster/anastasia_team.png" alt="team lead"></div>
                         <span class="cards__profession-name">Anastasia</span>
                         <span class="cards__profession-desc">&lt;QA/&gt;</span>
                         <a href="#">
